--- a/transport/doc/dissertation/content/newcommands.tex
+++ b/transport/doc/dissertation/content/newcommands.tex
@@ -3,6 +3,7 @@
 \newcommand{\eqp}{\,.}
 \newcommand{\eqc}{\,,}
 
+\newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\U}{\mathbf{U}}
 \newcommand{\A}{\mathbf{A}}
 \newcommand{\B}{\mathbf{B}}
@@ -13,6 +14,7 @@
 \renewcommand{\b}{\mathbf{b}}
 \renewcommand{\r}{\mathbf{r}}
 \newcommand{\x}{\mathbf{x}}
+\newcommand{\xt}{(\x,t)}
 \newcommand{\f}{\mathbf{f}}
 \newcommand{\s}{\mathbf{s}}
 \newcommand{\dt}{\Delta t}
