--- a/transport/doc/dissertation/content/low_order_scheme_graphtheoretic.tex
+++ b/transport/doc/dissertation/content/low_order_scheme_graphtheoretic.tex
@@ -102,7 +102,7 @@ The diagonal elements of the low-order system matrix are
 \]
 To prove that $A^L_{i,i}$ is non-negative, it is sufficient to prove that
 each term in the above expression is non-negative. The non-negativity of
-the interaction term and viscous term are obvious ($\sigma_t \ge 0, 
+the interaction term and viscous term are obvious ($\sigma \ge 0, 
 \, \nu_K^L\ge 0, \, b_K(\varphi_i, \varphi_i)>0$), but
 the non-negativity of the divergence term is not necessarily obvious. On the interior of
 the domain, the divergence term gives zero contribution because the divergence integral may
