a little work on INL presentation

--- a/transport/doc/INL_presentation/presentation.tex
+++ b/transport/doc/INL_presentation/presentation.tex
@@ -454,7 +454,7 @@ Using Continuous Finite Elements}
 \frametitle{Flux Corrected Transport (FCT) Scheme}
 \framesubtitle{Results Example}
 
-%\includegraphics[width=\textwidth]{./figures/advection_FCT.pdf}
+\includegraphics[width=\textwidth]{./figures/advection_FCT.pdf}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -463,7 +463,7 @@ Using Continuous Finite Elements}
 \frametitle{Results}
 \framesubtitle{Source Problem Results}
 
-%\includegraphics[width=\textwidth]{./figures/solutions_source_FE.pdf}
+\includegraphics[width=\textwidth]{./figures/solutions_source_FE.pdf}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -471,7 +471,7 @@ Using Continuous Finite Elements}
 \frametitle{Results}
 \framesubtitle{Smooth Problem Convergence Results (Using FE)}
 
-%\includegraphics[width=\textwidth]{./figures/convergence_smooth_FE.pdf}
+\includegraphics[width=\textwidth]{./figures/convergence_smooth_FE.pdf}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -479,7 +479,7 @@ Using Continuous Finite Elements}
 \frametitle{Results}
 \framesubtitle{Non-smooth Problem Convergence Results (Using SSPRK33)}
 
-%\includegraphics[width=\textwidth]{./figures/convergence_absorber_SSPRK33.pdf}
+\includegraphics[width=\textwidth]{./figures/convergence_absorber_SSPRK33.pdf}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -487,17 +487,6 @@ Using Continuous Finite Elements}
 \begin{frame}
 \frametitle{Conclusions}
 
-\begin{itemize}
-   \item guaranteed non-negative, DMP-satisfying scheme
-   \item monotonicity for problems tested, but not guaranteed
-   \item theoretical convergence rates observed
-   \item future work:
-      \begin{itemize}
-         \item implicit time discretizations
-         \item steady-state
-         \item more complicated physics
-      \end{itemize}
-\end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
