--- a/transport/doc/INL_presentation/presentation.tex
+++ b/transport/doc/INL_presentation/presentation.tex
@@ -278,21 +278,27 @@ Using Continuous Finite Elements}
       \nu_K^L \equiv \max\limits_{i\ne j\in \mathcal{I}(K)}\frac{\max(0,A\ij)}
       {-\sum\limits_{T\subset S\ij} b_T(\varphi_j, \varphi_i)}
    \end{equation}
+   \item This definition is designed to be the smallest number such that the
+      following is guaranteed:
+   \begin{equation}
+      D^L\ij \leq -A\ij, \quad j\ne i
+   \end{equation}
+   \item This is used to guarantee that the low-order steady-state matrix
+      $\A^L=\A+\D^L$ is an M-matrix, i.e., a \emph{monotone} matrix:
+      $\A^L\U \ge 0\Rightarrow \U\ge 0$.
 \end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 \frametitle{Low-Order Scheme}
-\framesubtitle{Properties}
+\framesubtitle{Discrete Maximum Principle}
 
 \begin{itemize}
-   \item These definitions make $(\A + \D^L)$ an M-matrix, which has
-      the following desirable consequences for the low-order solution $\U^{L,n+1}$:
-   \begin{itemize}
-      \item monotonicity
-      \item non-negativity
-      \item satisfaction of a discrete maximum principle (DMP):
+   \item In addition to guaranteeing monotonicity and positivity, the low-order
+      viscous terms guarantee the following discrete maximum principle (DMP),
+      where $U^n_{\substack{\max\\\min},i} =
+      \substack{\max\\\min\limits_{j\in\mathcal{I}(S_i)}}U^n_j$:
       \begin{equation}
          W_i^-(\U^n)\leq
          U_i^{L,n+1}\leq
@@ -303,8 +309,14 @@ Using Continuous Finite Elements}
          \sum\limits_j A\ij^L\right)
          + \frac{\Delta t}{m_i}b_i^n
       \end{equation}
-   \end{itemize}
-   \item However, this low-order scheme is only first-order accurate.
+   \item For example, when there is no reaction term or source term, this reduces
+      to the following DMP, which implies the scheme is local extremum
+      diminishing (LED):
+      \begin{equation}
+         U^n_{\min,i}\leq
+         U_i^{L,n+1}\leq
+         U^n_{\max,i}\qquad\forall i
+      \end{equation}
 \end{itemize}
 
 \end{frame}
@@ -319,73 +331,119 @@ Using Continuous Finite Elements}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{High-Order Scheme}
 \begin{frame}
-\frametitle{High-Order Scheme}
-\framesubtitle{Definition}
+\frametitle{Entropy Viscosity Scheme}
+\framesubtitle{Introduction}
 
 \begin{itemize}
-   \item Add high-order artificial viscosity:
-   \begin{equation}
-      \M^C\frac{\U^{H,n+1}-\U^n}{\dt} + (\A + \D^{H,n})\U^n = \b^n
-   \end{equation}
-   \begin{equation}
-      D\ij^{H,n} = \sum\limits_{K\subset S\ij}\nu_K^{H,n} b_K(\varphi_j,\varphi_i)
-   \end{equation}
-   \begin{equation}
-      \nu^{H,n}_K = \min(\nu^{L}_K,\nu^{E,n}_K)
-   \end{equation}
-   \item The entropy-based artificial viscosity $\nu^{E,n}_K$ is
-   proportional to local ``entropy'' production.
+   \item The standard Galerkin CFEM weak solution is not unique. Even with
+      FCT, it would not necessarily converge to the correct, physical
+      weak solution, i.e., the \emph{entropy} solution.
+   \item To converge to the entropy solution, one must ensure that an entropy
+      inequality is satisfied:
+      \begin{equation}
+         R(u) \equiv \pd{\eta(u)}{t} + \nabla\cdot\mathbf{G}(u) \leq 0
+      \end{equation}
+      for any convex entropy $\eta(u)$ and corresponding entropy flux
+      $\mathbf{G}(u)$.
+   \item This \emph{entropy residual} $R(u)$ measures entropy production;
+      where it is positive, the inequality is violated, so the residual
+      should be decreased somehow.
+   \item To enforce the inequality, the entropy viscosity method adds
+      viscosity in proportion to local entropy production, thus decreasing
+      local entropy.
 \end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{High-Order Scheme}
+\frametitle{Entropy Viscosity Scheme}
 \framesubtitle{Entropy Viscosity Definition}
 
 \begin{itemize}
-   \item One chooses a convex entropy function $E(\psi)$ such
-   as $E(\psi)=\frac{1}{2}\psi^2$ and manipulates the
-   transport equation to get an entropy residual:
+   \item One chooses a convex entropy function $\eta(u)$ such
+   as $\eta(u)=\frac{1}{2}u^2$ and manipulates the
+   conservation law equation to get an entropy residual:
    \begin{equation}
-      R_K(\psi) = \left\|\pd{E}{t}
-      + \frac{dE}{d\psi}\left(\mathbf{\Omega}\cdot\nabla \psi
-      + \sigma \psi
-      - q \right)\right\|_{L^\infty(K)}
+      R(u) = \pd{\eta}{t}
+      + \frac{d\eta}{du}\left(\nabla\cdot(\mathbf{v}u)
+      + \sigma u 
+      - q \right)
    \end{equation}
-   \item Entropy-based artificial viscosity is proportional to an entropy
-   residual $R_K^n(\psi_h)$:
-   \begin{equation}
-      \nu^{E,n}_K = \frac{c_E R_K^n(\psi_h)
-      + c_J\max\limits_{F\in\partial K}J_F(\psi_h^n)}
-      {\|E(\psi_h^n)-\bar{E}(\psi_h^n)\|_{L^\infty(\mathcal{D})}}
-   \end{equation}
+   \item Viscosity is set to be proportional to a linear combination
+      of the local entropy residual $R_K(u) = \left\|R(u)\right\|_{L^\infty(K)}$
+      and entropy jumps $J_F(u)$ across the faces:
+      \begin{equation}
+         \nu^{\eta}_K \propto c_R R_K(u_h)
+         + c_J\max\limits_{F\in\partial K}J_F(u_h)
+      \end{equation}
+   \item In practice, the entropy viscosity becomes the following, where the
+      denominator is just a normalization constant:
+      \begin{equation}
+         \nu^{\eta}_K = \frac{c_R R_K(u_h)
+         + c_J\max\limits_{F\in\partial K}J_F(u_h)}
+         {\|\eta(u_h)-\bar{\eta}(u_h)\|_{L^\infty(\mathcal{D})}}
+      \end{equation}
 \end{itemize}
    
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Entropy Viscosity Scheme}
+\framesubtitle{High-Order Scheme}
+
+\begin{itemize}
+   \item The high-order viscosity does not need to be any greater than the
+      low-order viscosity:
+      \begin{equation}
+         \nu^{H,n}_K = \min(\nu^{L}_K,\nu^{\eta,n}_K)
+      \end{equation}
+   \item For the high-order scheme, the mass matrix is not modified; the
+      only change is the addition of the high-order diffusion operator
+      $\D^{H,n}$: $\A \rightarrow \A + \D^{H,n}$:
+      \begin{equation}
+         \M^C\frac{\U^{H,n+1}-\U^n}{\dt} + (\A + \D^{H,n})\U^n = \b^n
+      \end{equation}
+   \item The high-order diffusion matrix is computed just as the low-order
+      counterpart, except that $\nu^{H,n}_K$ is used instead of $\nu^{L}_K$:
+      \begin{equation}
+         D\ij^{H,n} = \sum\limits_{K\subset S\ij}\nu_K^{H,n}
+            b_K(\varphi_j,\varphi_i)
+      \end{equation}
+\end{itemize}
+
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 \frametitle{High-Order Scheme}
 \framesubtitle{Results Example}
 
-%\includegraphics[width=\textwidth]{./figures/advection_high_order.pdf}
+\includegraphics[width=\textwidth]{./figures/advection_high_order.pdf}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{FCT Scheme}
 \begin{frame}
 \frametitle{Flux Corrected Transport (FCT) Scheme}
 \framesubtitle{Correction Flux Definition}
 
 \begin{itemize}
-   \item Define a correction flux $\f$:
-   \begin{align*}
-      \f\,\mbox{Def.:}\quad   & \M^L\frac{\U^{H,n+1}-\U^n}{\dt}+(\A+\D^L)\U^n = \b^n + \f^n\\
-      \mbox{Low-order:}\quad  & \M^L\frac{\U^{L,n+1}-\U^n}{\dt}+(\A + \D^L)\U^n = \b^n\\
-      \mbox{High-order:}\quad & \M^C\frac{\U^{H,n+1}-\U^n}{\dt}+(\A + \D^{H,n})\U^n = \b^n
-   \end{align*}
-   \item Thus $\f$ is
+   \item Recall that FCT defines antidiffusive correction fluxes
+      from a low-order, monotone scheme to a high-order scheme. Calling
+      these fluxes $\f$, this gives
+      \begin{equation}
+         \M^L\frac{\U^{H,n+1}-\U^n}{\dt}+(\A+\D^L)\U^n = \b^n + \f
+      \end{equation}
+   \item Subtracting the high-order scheme equation from this gives the
+      definition of $\f$:
+      \begin{equation}
+         \f \equiv -(\M^C-\M^L)\frac{\U^{H,n+1}-\U^n}{\dt} +(\D^L-\D^{H,n})\U^n
+      \end{equation}
+   \item Decomposing $\f$ into internodal fluxes
+      $F\ij$ such that $f_i = \sum_j F\ij$, where $\Delta_{j,i}[\mathbf{y}]$
+      denotes $y_j - y_i$:
    \begin{equation}
-      \f^n \equiv -(\M^C-\M^L)\frac{\U^{H,n+1}-\U^n}{\dt} +(\D^L-\D^{H,n})\U^n
+      F\ij = -M\ij^C\Delta_{j,i}\left[\frac{\U^{H,n+1}-\U^n}{\Delta t}\right]
+      + (D\ij^L-D\ij^{H,n})\Delta_{j,i}[\U^n]
    \end{equation}
 \end{itemize}
 
@@ -396,56 +454,122 @@ Using Continuous Finite Elements}
 \framesubtitle{FCT Overview}
 
 \begin{itemize}
-   \item Decompose $\f$ into internodal fluxes $F\ij$: $f_i = \sum\limits_j F\ij$:
-   \begin{multline}
-      F\ij = -M\ij^C\left(\frac{dU_j}{dt}^{H,n+1} - \frac{dU_i}{dt}^{H,n+1}\right)\\
-      + (D\ij^L-D\ij^H)(U^n_j - U^n_i)
-   \end{multline}
-   \item The FCT scheme limits these fluxes with a limiter $\L$:
-   \begin{equation}
-      \M^L\frac{\U^{n+1}-\U^n}{\dt} + \A^L\U^n = \b + \L[\F]
-   \end{equation}
-   \item The limiter $\L$ enforces the discrete maximum principle:
-   \begin{equation}
+   \item Recall that the objective of FCT is to limit these antidiffusive
+      fluxes to enforce some physical bounds.
+   \item The chosen bounds take the form of the DMP satisfied by the
+      low-order scheme:
+      \begin{equation}
          W_i^-(\U^n)\leq
          U_i^{n+1}\leq
          W_i^+(\U^n)\qquad\forall i
-   \end{equation}
+      \end{equation}
+   \item This is achieved by applying a limiting coefficient $L\ij$ to each
+      internodal flux $F\ij$:
+      \begin{equation}
+         \M^L\frac{\U^{n+1}-\U^n}{\dt} + \A^L\U^n = \b + \L\cdot\F
+      \end{equation}
+   \item Each limiting coefficient is between zero and unity: $0\leq L\ij\leq 1$.
+   \begin{itemize}
+      \item If all $L\ij$ are zero, then the low-order scheme is produced.
+      \item If all $L\ij$ are one, then the high-order scheme is produced.
+   \end{itemize}
 \end{itemize}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 \frametitle{Flux Corrected Transport (FCT) Scheme}
-\framesubtitle{Limiting Coefficient Definition}
+\framesubtitle{Limiting Coefficients Introduction}
 
 \begin{itemize}
-   \item Each correction flux $F\ij$ has an associated limiting
-   coefficient $\L\ij$: $\L[\F]_i = \sum\limits_j \L\ij F\ij$:
-\begin{equation}\label{eq:P_defs}
-   P_i^+ \equiv \sum\limits_j\max(0,F_{i,j}) \qquad
-   P_i^- \equiv \sum\limits_j\min(0,F_{i,j})
-\end{equation}
-\begin{equation}\label{eq:Q_defs}
-      Q_i^\pm \equiv m_i\frac{W_i^\pm-U_i^n}{\Delta t}
-      + \sum\limits_j A_{i,j}^L U_j^n - b_i
-\end{equation}
-\begin{equation}\label{eq:R_defs}
-   R_i^\pm \equiv\left\{
-      \begin{array}{l l}
-         1                                          & P_i^\pm = 0\\
-         \min\left(1,\frac{Q_i^\pm}{P_i^\pm}\right) & P_i^\pm \ne 0
-      \end{array}
-      \right.
-\end{equation}
-\begin{equation}
-   \L\ij \equiv\left\{
-      \begin{array}{l l}
-         \min(R_i^+,R_j^-) & F_{i,j} \geq 0\\
-         \min(R_i^-,R_j^+) & F_{i,j} < 0
-      \end{array}
-      \right.
-\end{equation}
+   \item The enforced bounds can be rearranged to bound the limited flux sums:
+      \begin{equation}
+         Q^-_i \leq \sum\limits_j L\ij F\ij \leq Q^+_i
+      \end{equation}
+      where $Q_i^\pm$ has the following definition:
+      \begin{equation}
+         Q_i^\pm \equiv m_i\frac{W_i^\pm-U_i^n}{\Delta t}
+         + \sum\limits_j A_{i,j}^L U_j^n - b_i
+      \end{equation}
+   \item The classic Zalesak limiting strategy starts by separating the
+      negative and positive fluxes:
+      \begin{equation}
+         Q^-_i \leq \sum\limits_{j:F\ij<0} L\ij F\ij +
+            \sum\limits_{j:F\ij>0} L\ij F\ij\leq Q^+_i
+      \end{equation}
+      The positive fluxes risk violating $Q_i^+$, and the negative fluxes risk
+      violating $Q_i^-$.
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Flux Corrected Transport (FCT) Scheme}
+\framesubtitle{Limiting Coefficients Definition}
+
+\begin{itemize}
+   \item Zalesak's limiting coefficients assume that
+      all positive fluxes into a node $i$ have the same limiting coefficient
+      $L^+_i$ and similarly, negative fluxes have the same limiting coefficient
+      $L^-_i$:
+      \begin{equation}
+         Q^-_i \leq L^-_i F^-_i + L^+_i F^+_i \leq Q^+_i
+      \end{equation}
+      where
+      \begin{equation}
+         F_i^- \equiv \sum\limits_{j:F\ij<0} F\ij \qquad
+         F_i^+ \equiv \sum\limits_{j:F\ij>0} F\ij
+      \end{equation}
+   \item As a conservative bound for $L^+_i$, contributions from negative fluxes
+      are ignored (pretending $L_i^-=0$), giving $L^+_i \leq \frac{Q_i^+}{F_i^+}$
+      and similarly for $L^-_i$ and the lower bound.
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Flux Corrected Transport (FCT) Scheme}
+\framesubtitle{Limiting Coefficients Definition (Cont.)}
+
+\begin{itemize}
+   \item Then, recalling that limiting coefficients are not greater than unity:
+      \begin{equation}
+         L_i^\pm \equiv\left\{
+            \begin{array}{l l}
+               1                                          & F_i^\pm = 0\\
+               \min\left(1,\frac{Q_i^\pm}{F_i^\pm}\right) & F_i^\pm \ne 0
+            \end{array}
+            \right.
+      \end{equation}
+   \item However, to limit fluxes conservatively, limited correction fluxes must
+      be equal and opposite:
+      \begin{equation}
+         L\ij F\ij = -L_{j,i} F_{j,i}
+      \end{equation}
+      Since $F\ij$ happens to be skew symmetric ($F_{j,i}=-F\ij$) due to the
+      chosen flux decomposition, the limiting coefficients must be symmetric:
+      $L_{j,i} = L\ij$.
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Flux Corrected Transport (FCT) Scheme}
+\framesubtitle{Limiting Coefficients Definition (Cont.)}
+
+\begin{itemize}
+   \item Thus when deciding the limiting coefficient $L\ij$ for a flux $F\ij$, 
+      one must not only consider the bounds for $i$ but also the bounds for $j$.
+      Specifically, a positive flux $F\ij$ risks violating $Q_i^+$ and $Q_j^-$.
+      Putting everything together,
+      \begin{equation}
+         L\ij \equiv\left\{
+            \begin{array}{l l}
+               \min(L_i^+,L_j^-) & F_{i,j} \geq 0\\
+               \min(L_i^-,L_j^+) & F_{i,j} < 0
+            \end{array}
+            \right.
+      \end{equation}
 \end{itemize}
 
 \end{frame}
